--- a/public/site/assets/css/rtl.css
+++ b/public/site/assets/css/rtl.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "DINNextLTArabic-Light";
-    src: url("../font/alfont_com_AlFont_com_DINNEXTLTARABIC-LIGHT-2-1.ttf")
+    src: url("../font/DINNextLTArabic-Light.ttf")
 }
 
 @font-face {
@@ -49,7 +49,7 @@ body {
 
 p {
     margin: 0;
-    font-family: var(--khater-font-three);
+    font-family: var(--khater-font-three) !important;
 
 }
 
@@ -60,7 +60,7 @@ h4,
 h5,
 h6 {
     color: var(--khater-black);
-    font-family: var(--khater-font-three);
+    font-family: var(--khater-font-three)!important;
     margin: 0;
     font-size: 32px;
 }
