--- a/public/site/assets/css/rtl.css
+++ b/public/site/assets/css/rtl.css
@@ -217,6 +217,6 @@ h6 {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      font-family: var(--khater-font-three);
+      font-family: var(--khater-font-three) !important;
     }
   }
