--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -985,7 +985,7 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-family: var(--khater-font-three);
+    font-family: var(--khater-font-two);
   }
 }
 
