--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -11856,7 +11856,7 @@ body.boxed-wrapper {
 
 .main-timeline9 {
   position: relative;
-  font-family: --khater-font-two;
+  font-family: var(--khater-font-two);
 }
 
 .main-timeline9:after,
