--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -1172,12 +1172,12 @@ ul {
   transition: 500ms;
 }
 
-.main-menu .main-menu__list>li>ul>li:hover>a::before,
+/* .main-menu .main-menu__list>li>ul>li:hover>a::before,
 .main-menu .main-menu__list>li>ul>li>ul>li:hover>a::before,
 .stricky-header .main-menu__list>li>ul>li:hover>a::before,
 .stricky-header .main-menu__list>li>ul>li>ul>li:hover>a::before {
   transform: translateY(-50%) scale(1);
-}
+} */
 
 .main-menu .main-menu__list>li>ul>li>ul,
 .stricky-header .main-menu__list>li>ul>li>ul {
