--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -110,7 +110,7 @@ h6 {
 p {
   margin: 0;
   font-family: var(--khater-font-two);
-
+    font-size: 19px;
 }
 
 dl,
@@ -1083,7 +1083,7 @@ ul {
   position: absolute;
   top: 100%;
   left: 0;
-  min-width: 270px;
+  min-width: 205px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -1216,7 +1216,7 @@ ul {
 }
 
 .megamenu.ling {
-  margin-left: 160px !important;
+  margin-left: 15vh !important;
   margin-right: 0px !important;
 
 }
@@ -3425,12 +3425,10 @@ body.locked .page-wrapper {
 }
 
 .causes-one__title {
-  font-size: 34px;
+  font-size: 23px;
   line-height: 36px;
-  /* font-weight: 800; */
-
   text-align: justify;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.07em;
 }
 
 .causes-one__title a {
