--- a/public/site/assets/css/rtl.css
+++ b/public/site/assets/css/rtl.css
@@ -50,7 +50,7 @@ body {
 p {
     margin: 0;
     font-family: var(--khater-font-two) !important;
-
+    font-size: 19px;
 }
 
 h1,
@@ -201,6 +201,6 @@ h6 {
 
   .megamenu.ling {
     margin-left: 0 !important;
-    margin-right: 160px !important;
+    margin-right: 25vh !important;
 
   }
