--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -12469,3 +12469,7 @@ body.boxed-wrapper {
     color: var(--khater-primary);
     transform: rotateY(180deg);
 }
+
+.subscribe {
+    font-family: var(--khater-font-two);
+}
