--- a/public/site/assets/css/rtl.css
+++ b/public/site/assets/css/rtl.css
@@ -60,7 +60,7 @@ h4,
 h5,
 h6 {
     color: var(--khater-black);
-    font-family: var(--khater-font-two)!important;
+    font-family: var(--khater-font-two) !important;
     margin: 0;
     font-size: 32px;
 }
@@ -186,10 +186,10 @@ h6 {
     position: relative;
     display: block;
     margin-right: 60px;
-  }
+}
 
 
-  .counter-one__single {
+.counter-one__single {
     position: relative;
     flex: 0 0 25%;
     max-width: 25%;
@@ -197,10 +197,38 @@ h6 {
     text-align: right;
     margin-bottom: 33px;
     display: inline-flex;
-  }
+}
 
-  .megamenu.ling {
+.megamenu.ling {
     margin-left: 0 !important;
     margin-right: 20vh !important;
 
-  }
+}
+
+
+
+.preloader__image {
+    background-image: url(../images/logo-ar.png) !important;
+}
+
+.main-slider__nav {
+    position: absolute;
+    top: 42%;
+    right: 45px;
+    z-index: 100;
+    transform: translateY(-50%) translateX(0%);
+    display: flex;
+    justify-content: end;
+    align-items: flex-start;
+    flex-direction: revert;
+    max-width: 95vw;
+    width: 100%;
+    padding: 0 15px;
+    height: 0;
+    line-height: 0;
+}
+
+.main-slider__nav .swiper-button-prev {
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
