--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -2611,8 +2611,8 @@ body.locked .page-wrapper {
   /* font-weight: 900; */
   line-height: 40px;
   letter-spacing: -0.04em;
-  margin-top: 24px;
-  margin-bottom: 26px;
+  /* margin-top: 24px; */
+  /* margin-bottom: 26px; */
   opacity: 0;
   visibility: hidden;
   -webkit-transform: translateY(-120px);
