--- a/public/site/assets/css/rtl.css
+++ b/public/site/assets/css/rtl.css
@@ -227,6 +227,12 @@ h6 {
     line-height: 0;
 }
 
+
+.number
+{
+    direction: ltr !important;
+}
+
 @media only screen and (min-width: 1099px) and (max-width: 1450px) {
     .main-slider__nav {
         left: 94%;
