--- a/public/site/assets/css/khater.css
+++ b/public/site/assets/css/khater.css
@@ -5242,7 +5242,7 @@ body.locked .page-wrapper {
   position: relative;
   display: inline-block;
   font-size: 15px;
-  color: #98a8a5;
+  color: #FFF;
   font-weight: 400;
   transition: all 500ms ease;
 }
@@ -5329,7 +5329,7 @@ body.locked .page-wrapper {
 }
 
 .footer-widget__contact-text {
-  color: #98a8a5;
+  color: #FFF;
   font-weight: 400;
   padding-bottom: 10px;
 }
